Add minimal working code for react app

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>test</title>
+    <title>Your Daily dose of YouTube</title>
   </head>
   <body>
-
-    <script src='ext/ext.js'></script>
-    <a href="https://express-webpack-boilerplate.herokuapp.com/docs">Link to documentation</a>
-    <img src='img/heic0910e.jpg' height="300px" width="500px">
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
   </body>
 </html>
