--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Your Daily dose of YouTube</title>
+    <title>Enjoy your daily video!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
