--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="icon" type="image/png" href="data/favicon-32x32.png" sizes="32x32" />
     <title>Enjoy your daily video!</title>
   </head>
   <body>
